--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# eddb.io dumps
+eddb/*.json
+eddb/*.csv
+
+# private session data
+session.json
