--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "Trade Route Calculator for Elite Dangerous, in the style of TradeDangerous",
   "main": "trade.js",
   "dependencies": {
+    "base64url": "^3.0.1",
     "co": "^4.6.0",
     "commander": "^2.9.0",
     "csv-parser": "^1.11.0",
+    "express": "^4.16.4",
     "flushwritable": "^1.0.0",
     "inquirer": "^3.0.6",
     "lru-cache": "^4.0.2",
     "nan": "^2.6.2",
+    "opn": "^6.0.0",
     "pg": "^6.1.5",
     "progress": "^2.0.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
+    "simple-oauth2": "^2.2.1",
     "sqlite": "^2.7.0",
     "stream-from-iterator": "^1.0.1",
     "tough-cookie": "^2.3.2"
